@@ -27,6 +27,7 @@
 //
 
 using System;
+using MonoDevelop.Projects.Dom;
 
 namespace MonoDevelop.Xml.StateEngine
 {
@@ -91,20 +92,17 @@ namespace MonoDevelop.Xml.StateEngine
 		public XmlSingleQuotedAttributeValueState () : this (new XmlMalformedTagState ()) {}
 		public XmlSingleQuotedAttributeValueState (XmlMalformedTagState malformedTagState) : base (malformedTagState) {}
 		
+		protected char Quote = '\'';
+		
 		public override State PushChar (char c, IParseContext context, ref string rollback)
 		{
 			System.Diagnostics.Debug.Assert (((XAttribute) context.Nodes.Peek ()).Value == null);
-			
-			if (c == '\n' || c == '\r') {
-				XAttribute att = (XAttribute) context.Nodes.Peek ();
-				context.LogWarning ("Unexpected newline in value for attribute '" + att.Name.FullName +"'.", att.Region.Start);
-			}
 			
 			if (c == '<') {
 				//the parent state should report the error
 				rollback = string.Empty;
 				return Parent;
-			} else if (c == '\'') {
+			} else if (c == Quote) {
 				//ending the value
 				XAttribute att = (XAttribute) context.Nodes.Peek ();
 				att.Value = context.KeywordBuilder.ToString ();
@@ -117,34 +115,13 @@ namespace MonoDevelop.Xml.StateEngine
 		}
 	}
 	
-	public class XmlDoubleQuotedAttributeValueState : XmlAttributeValueState
+	public class XmlDoubleQuotedAttributeValueState : XmlSingleQuotedAttributeValueState
 	{
 		public XmlDoubleQuotedAttributeValueState () : this (new XmlMalformedTagState ()) {}
-		public XmlDoubleQuotedAttributeValueState (XmlMalformedTagState malformedTagState) : base (malformedTagState) {}
 		
-		public override State PushChar (char c, IParseContext context, ref string rollback)
-		{
-			System.Diagnostics.Debug.Assert (((XAttribute) context.Nodes.Peek ()).Value == null);
-			
-			if (c == '\n' || c == '\r') {
-				XAttribute att = (XAttribute) context.Nodes.Peek ();
-				context.LogWarning ("Unexpected newline in value for attribute '" + att.Name.FullName +"'.", att.Region.Start);
-			}
-			
-			if (c == '<') {
-				//the parent state should report the error
-				rollback = string.Empty;
-				return Parent;
-			} else if (c == '"') {
-				//ending the value
-				XAttribute att = (XAttribute) context.Nodes.Peek ();
-				att.Value = context.KeywordBuilder.ToString ();
-				return Parent;
-			}
-			else {
-				context.KeywordBuilder.Append (c);
-				return null;
-			}
+		public XmlDoubleQuotedAttributeValueState (XmlMalformedTagState malformedTagState)
+		: base (malformedTagState) {
+			Quote = '"';
 		}
 	}
 }
